<resources>
    <string name="app_name" translatable="false">Rating Dialog</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="error_no_google_play">Error! Couldn\'t find Google Play on this device.</string>
    <string name="market_prefix" translatable="false">market://details?id=</string>
</resources>
