<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_rating"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dialog_rating_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_small"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/dialog_rating_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:gravity="center"
        android:padding="@dimen/margin_large"
        android:textSize="@dimen/text_size_title_1"
        tools:text="@string/rating_dialog_experience" />

    <RatingBar
        android:id="@+id/dialog_rating_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:numStars="5"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:stepSize="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_rating_button_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/margin_default"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_button"
            tools:text="@string/rating_dialog_cancel" />

        <TextView
            android:id="@+id/dialog_rating_button_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="@dimen/margin_default"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_button"
            tools:text="@string/rating_dialog_submit" />

    </LinearLayout>

</LinearLayout>